tests/ui/parser/new-unicode-escapes-1.rs
pub fn main() {
    let s = "\u{2603"; //~ ERROR unterminated unicode escape
}

// ferrocene-annotations: fls_ypa86oqxhn9u
// Character Literals
